--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,9 @@ pytest = "*"
 spacy = "*"
 pyap = "*"
 phonenumbers = "*"
-en_core_web_md = {file = "https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.2.0/en_core_web_md-3.2.0-py3-none-any.whl"}
+google-cloud-language = "*"
+requests = "*"
+google-auth = "*"
 
 [dev-packages]
 
